Fix atom matching bug