@@ -3,11 +3,13 @@ package tailor.operator;
 import static org.junit.Assert.assertEquals;
 import static tailor.description.DescriptionFactory.group;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.Test;
 
 import tailor.condition.LabelPartition;
+import tailor.condition.LabelPartition.LabelledPart;
 import tailor.description.AtomDescription;
 import tailor.description.DescriptionPath;
 import tailor.description.GroupDescription;
@@ -21,7 +23,8 @@ public class TestLabelPartition {
 		
 		LabelPartition l = LabelPartition.fromDescriptionPaths(List.of(dp1, dp2));
 		System.out.println(l);
-		assertEquals("3 parts", 3, l.numberOfParts());
+		assertEquals("2 parts", 2, l.numberOfParts());
+		assertEquals(new LabelPartition(List.of(l(0, "O"), l(2, "C"))), l);
 	}
 	
 	@Test
@@ -32,7 +35,8 @@ public class TestLabelPartition {
 		
 		LabelPartition l = LabelPartition.fromDescriptionPaths(List.of(dp1, dp2, dp3));
 		System.out.println(l);
-		assertEquals("6 parts", 6, l.numberOfParts());
+		assertEquals("3 parts", 3, l.numberOfParts());
+		assertEquals(new LabelPartition(List.of(l(0, "N"), l(2, "C"), l(5, "O"))), l);
 	}
 	
 	@Test
@@ -42,7 +46,8 @@ public class TestLabelPartition {
 		
 		LabelPartition l = LabelPartition.fromDescriptionPaths(List.of(dp1, dp2));
 		System.out.println(l);
-		assertEquals("3 parts", 3, l.numberOfParts());
+		assertEquals("2 parts", 2, l.numberOfParts());
+		assertEquals(new LabelPartition(List.of(l(1, "N"), l(2, "C"))), l);
 	}
 	
 	@Test
@@ -51,12 +56,17 @@ public class TestLabelPartition {
 		GroupDescription gp2 = group().withIndex(0).build();
 		DescriptionPath dp1 = new DescriptionPath(gp1, new AtomDescription("C"));
 		DescriptionPath dp2 = new DescriptionPath(gp1, new AtomDescription("O"));
-		DescriptionPath dp3 = new DescriptionPath(gp2, new AtomDescription("N"));
+		DescriptionPath dp3 = new DescriptionPath(gp2, new AtomDescription("H"));
+		DescriptionPath dp4 = new DescriptionPath(gp2, new AtomDescription("N"));
 		
-		LabelPartition l = LabelPartition.fromDescriptionPaths(List.of(dp1, dp2, dp3));
+		LabelPartition l = LabelPartition.fromDescriptionPaths(List.of(dp1, dp2, dp3, dp4));
 		System.out.println(l);
-		assertEquals("5 parts", 5, l.numberOfParts());
-		assertEquals("Last part", List.of("O", "C"), l.getPart(4));
+		assertEquals("2 parts", 2, l.numberOfParts());
+		assertEquals(new LabelPartition(List.of(l(4, "C", "O"), l(2, "H", "N"))), l);
+	}
+	
+	private LabelledPart l(int index, String... labels) {
+		return new LabelledPart(index, Arrays.asList(labels));
 	}
 	
 }
